--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,301 @@
-body{
-    background: #444;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+    box-sizing: border-box;
+}
+
+html,body{
+    padding:0;
+    margin:0;
+    font-family: 'poppins', 'sans serif';
+}
+
+#loader{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+main{
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+#header{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 80px;
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 1px 10px 1px rgb(225, 225, 225);
+    z-index:10;
+}
+
+.logo{
+    width: 35%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding:0px 100px;
+    margin:0px;
+}
+
+.logo p{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+#search-container{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#search-container form{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#search-container form input{
+    display: inline-block;
+    width: 70%;
+    padding: 10px;
+    outline: none;
+    border-radius: 0px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border: 1px solid black;
+}
+
+#search-container form button{
+    display: inline-block;
+    width: 30%;
+    padding: 10px;
+    border-radius: 0px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border: 1px solid black;
+    border-left: 0px;
+    outline: none;
+    cursor: pointer;
+}
+
+
+
+#header ul{
+    width: 35%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin:0;
+    padding:0px 100px;
+}
+
+#header ul li{
+    display: inline-block;
+}
+
+#header ul li a{
+    text-decoration: none;
+}
+
+
+#hero{
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    background: rgb(250, 250, 250);
+    padding: 100px 20px 100px 20px;
+}
+
+#data{
+    display: flex;
+    flex-direction: row;
+}
+
+#data h2{
+    margin: 10px 0px;
+    line-height: 1.2;
+    font-size: 22px;
+}
+
+#data p{
+    margin: 10px 0px;
+}
+
+#pm, #pmp, #ozone, #index{
+    position: relative;
+    width: 25%;
+    padding: 40px 40px 40px 35px;
+    background: #fff;
+    box-shadow: 0px 1px 10px 1px rgb(225, 225, 225);
+    border-radius: 5px;
+    border-left:5px solid transparent;
+}
+#pm, #pmp,#index{
+    margin-right: 20px;
+}
+
+#location{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    height: 100%;
+}
+
+#map,#info{
+    height: 100%;
+    padding: 40px;
+    width: 50%;
+    background: #fff;
+    box-shadow: 0px 1px 10px 1px rgb(225, 225, 225);
+    border-radius: 5px;
+}
+
+#info{
+    margin-right: 20px;
+    position: relative;
+}
+
+.icon{
+    position:absolute;
+    right:20px;
+    top:20px;
+    display: inline-block;
+    cursor:pointer;
+    font-size: 20px;
+}
+
+.tooltip{
+    visibility: hidden;
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: rgb(220, 220, 220);
+    text-align: center;
+    padding: 10px 5px;
+    border-radius: 4px;
+    position: absolute;
+    z-index: 20;
+    bottom: 110%;
+    left: 50%;
+    margin-left: -100px;
+    font-size: 10px;
+    font-family: 'poppins', 'sans serif';
+    line-height: 1.2;
+}
+#ozone .icon .tooltip{
+    margin-left: -200px;
+}
+.icon:hover .tooltip {
+    visibility: visible;
+}
+
+.legend{
+    visibility: hidden;
+    position: absolute;
+    top:100%;
+    left:20px;
+    width: auto;
+    height: auto;
+    background: rgba(0, 0, 0, 0.8);
+    z-index:20;
+    padding:20px;
+    font-family: 'poppins', sans-serif;
+    font-size: 10px;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+}
+.i-table:hover .legend{
+    visibility: visible;
+}
+table{
+    border-collapse: collapse;
+    text-align: center;
+    width:200px;
+}
+th{
+    background: rgb(255, 255, 255);
+    padding: 5px 5px;
+    color: black;
+}
+.th-value{
+    width: 40%;
+}
+
+td{
+    padding: 5px 15px;
+}
+
+.green{
+    background: #009966;
+}
+.yellow{
+    background: #FFDE33;
+}
+.orange{
+    background: #FF9933;
+}
+.red{
+    background: #CC0133;
+}
+.purple{
+    background: #660099;
+}
+.dark-red{
+    background: #7E0122;
+}
+
+#footer{
+    height: 80px;
+    position: fixed;
+    bottom: 0;
+    left:0;
+    background: rgb(21, 21, 21);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+#footer p{
+    color: rgb(165, 165, 165);
+}
+
+
+
+.border-green{
+    border-color: #009966!important;
+}
+.border-yellow{
+    border-color: #FFDE33!important;
+}
+.border-orange{
+    border-color: #FF9933!important;
+}
+.border-red{
+    border-color: #CC0133!important;
+}
+.border-purple{
+    border-color: #660099!important;
+}
+.border-dark-red{
+    border-color: #7E0122!important;
 }
