--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,6 +118,10 @@ main{
 #myposition{
     cursor: pointer;
 }
+.hvr-underline-from-left:before{
+    background:#000!important;
+    height: 1px!important;
+}
 
 
 #hero{
@@ -279,6 +283,7 @@ td{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 0px 20px;
 }
 #footer p{
     color: rgb(165, 165, 165);
